Fixed alignment of title and menu images

--- a/list.css
+++ b/list.css
@@ -76,10 +76,10 @@ body {
 }
 
 header {
+    margin: 10px 0px;
 }
 
 h1 {
-    margin: 10px 10px 10px 0px;
     font-size: 30px;
     text-transform: lowercase;
     display: inline-block;
